--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
             <div class="col-sm-4">
                 <p class="text-center"><strong>Beach Power</strong></p><br>
                 <a href="#demo3" data-toggle="collapse">
-                    <img src="" class="img-circle person" alt="Beach Power">
+                    <img src="https://i.postimg.cc/zGy4hbN2/big-ocean-wave-under-blue-sky.jpg" class="img-circle person"
+                        alt="Beach Power">
                 </a>
                 <div id="demo3" class="collapse">
                     <p></p>
