--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
             <div class="col-sm-4">
                 <p class="text-center"><strong>Yoga</strong></p><br>
                 <a href="#demo2" data-toggle="collapse">
-                    <img src="" class="img-circle person" alt="Yoga">
+                    <img src="https://i.postimg.cc/Ss2SyZRK/beach-yoga-pose-in-sand-at-sunset.jpg"
+                        class="img-circle person" alt="Yoga">
                 </a>
                 <div id="demo2" class="collapse">
                     <p></p>
