--- a/index.html
+++ b/index.html
@@ -119,8 +119,15 @@
                         class="img-circle person" alt="Yoga">
                 </a>
                 <div id="demo2" class="collapse">
-                    <p></p>
-                    <p></p>
+                    <p>Yoga is a balance between your inner world and ourter world. Some of the emotional health
+                        benefits of yoga are:</p>
+                    <ul>
+                        <li>One is more in tune with their body.</li>
+                        <li>It relieves stress.</li>
+                        <li>It focuses ones attention.</li>
+                        <li>It clears ones concentration.</li>
+                        <li>It soothes the nervous system.</li>
+                    </ul>
                 </div>
             </div>
             <div class="col-sm-4">
