--- a/index.html
+++ b/index.html
@@ -92,8 +92,16 @@
 
     <div class="container text-center">
         <h3>Blue Beach Vibes</h3>
+        <p>“All of us have in our veins the exact same percentage of salt in our blood that exists in the ocean, and,
+            therefore, we have salt in our blood, in our sweat, in our tears. We are tied to the ocean. And when we go
+            back to the sea — whether it is to sail or to watch it — we are going back from whence we came.”
+
+            – President John F. Kennedy</p>
         <p><em>Here at Blue Beach Vibes we help people achieve peace through meditation, yoga and the power of
-                the beach.</em></p>
+                the beach. We know how big of an impact each of these tools can have on a person, so we decided to join
+                the three together. Bringing your feelings to a center with meditation, then balancing that center out
+                with yoga all while smelling and listening to the ocean can bring peace to anyone looking for it.</em>
+        </p>
         <br>
         <div class="row">
             <div class="col-sm-4">
@@ -137,8 +145,15 @@
                         alt="Beach Power">
                 </a>
                 <div id="demo3" class="collapse">
-                    <p></p>
-                    <p></p>
+                    <p>Great big bodies of water are known to have major impacts on a human body, spirit and mind. Here
+                        are a few interesting facts about how the ocean can affect humans in a positive way:</p>
+                    <ul>
+                        <li>The slow, rhythmic sound of waves destresses the nervous system.</li>
+                        <li>As a color, the blue ocean provides a calming sensation when observed.</li>
+                        <li>The negative ions that float up with a sea breeze actually calm a brain. Studies have proven
+                            this calming effect is evident with people suffering from Seasonal Affective Disorder (SAD).
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
