--- a/index.html
+++ b/index.html
@@ -105,9 +105,11 @@
         <br>
         <div class="row">
             <div class="col-sm-4">
-                <p id="home" class="text-center"><strong>Meditation</strong></p><br>
+                <br><br>
+                <p id="home" class="text-center"><strong>Meditation</strong></p>
                 <a href="#demo" data-toggle="collapse">
-                    <img src="" class="img-circle person" alt="Meditation">
+                    <img src="https://i.postimg.cc/1Rpr5nBr/woman-meditates.jpg" class="img-circle person"
+                        alt="Meditation">
                 </a>
                 <div id="demo" class="collapse">
                     <p>Popular meditation chants can include:</p>
@@ -119,9 +121,9 @@
                         <li>Lumen de Lumine</li>
                     </ul>
                 </div>
-            </div>
+            </div><br><br>
             <div class="col-sm-4">
-                <p class="text-center"><strong>Yoga</strong></p><br>
+                <p class="text-center"><strong>Yoga</strong></p>
                 <a href="#demo2" data-toggle="collapse">
                     <img src="https://i.postimg.cc/Ss2SyZRK/beach-yoga-pose-in-sand-at-sunset.jpg"
                         class="img-circle person" alt="Yoga">
@@ -136,10 +138,10 @@
                         <li>It clears ones concentration.</li>
                         <li>It soothes the nervous system.</li>
                     </ul>
-                </div>
+                </div><br><br>
             </div>
             <div class="col-sm-4">
-                <p class="text-center"><strong>Beach Power</strong></p><br>
+                <p class="text-center"><strong>Beach Power</strong></p>
                 <a href="#demo3" data-toggle="collapse">
                     <img src="https://i.postimg.cc/zGy4hbN2/big-ocean-wave-under-blue-sky.jpg" class="img-circle person"
                         alt="Beach Power">
@@ -155,7 +157,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div><br>
         </div>
         <div class="container">
             <h3 id="contact" class="text-center">Contact</h3>
