--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     </ul>
                 </div>
             </div><br>
-        </div>
+        </div><br><br>
         <div class="container">
             <h3 id="contact" class="text-center">Contact</h3>
             <p class="text-center"><em>Blue Beach Vibes</em></p>
@@ -171,37 +171,8 @@
                 </div>
             </div>
         </div>
-        <script>
-            $(document).ready(function () {
-                // Initialize Tooltip
-                $('[data-toggle="tooltip"]').tooltip();
-
-                // Add smooth scrolling to all links in navbar + footer link
-                $(".navbar a, footer a[href='#myPage']").on('click', function (event) {
-
-                    // Make sure this.hash has a value before overriding default behavior
-                    if (this.hash !== "") {
-
-                        // Prevent default anchor click behavior
-                        event.preventDefault();
-
-                        // Store hash
-                        var hash = this.hash;
-
-                        // Using jQuery's animate() method to add smooth page scroll
-                        // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
-                        $('html, body').animate({
-                            scrollTop: $(hash).offset().top
-                        }, 900, function () {
-
-                            // Add hash (#) to URL when done scrolling (default click behavior)
-                            window.location.hash = hash;
-                        });
-                    } // End if
-                });
-            })
-        </script>
-
+        <div id="message">Namaste!</div>
+        <script src="js/add-content.js"></script>
 </body>
 
 </html>
