--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="row test">
                 <div class="col-md-12">
                     <p>Contact us for any inquiries on our vibes.</p>
-                    <p><span class="glyphicon glyphicon-map-marker"></span>Lapeer, Mi</p>
+                    <p><span class="glyphicon glyphicon-map-marker"></span>Venice, Fl</p>
                     <p><span class="glyphicon glyphicon-phone"></span>Phone: +00 55555555555</p>
                     <p><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</p>
                 </div>
