--- a/index.html
+++ b/index.html
@@ -26,33 +26,17 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#home">Techniques</a></li>
-                    <li><a href="#contact">Contact us</a></li>
-                    <li><a href="#tour">TOUR</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Merchandise</a></li>
-                            <li><a href="#">Extras</a></li>
-                            <li><a href="#">Media</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
+                    <li><a href="#contact">Contact Us</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
         </ol>
-
-        <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
                 <img src="https://i.postimg.cc/65WmttKY/blue-beach-waves.jpg" alt="beach">
@@ -78,8 +62,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- Left and right controls -->
         <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
@@ -97,6 +79,7 @@
             back to the sea — whether it is to sail or to watch it — we are going back from whence we came.”
 
             – President John F. Kennedy</p>
+        <br>
         <p><em>Here at Blue Beach Vibes we help people achieve peace through meditation, yoga and the power of
                 the beach. We know how big of an impact each of these tools can have on a person, so we decided to join
                 the three together. Bringing your feelings to a center with meditation, then balancing that center out
