--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
 </head>
 
-<body>
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -41,7 +41,7 @@
             <div class="item active">
                 <img src="https://i.postimg.cc/65WmttKY/blue-beach-waves.jpg" alt="beach">
                 <div class="carousel-caption">
-                    <h3>Feel Small</h3>
+                    <h3 id=>Feel Small</h3>
                     <p>The world is big and beautiful.</p>
                 </div>
             </div>
@@ -139,23 +139,63 @@
                             this calming effect is evident with people suffering from Seasonal Affective Disorder (SAD).
                         </li>
                     </ul>
-                </div>
-            </div><br>
-        </div><br><br>
-        <div class="container">
-            <h3 id="contact" class="text-center">Contact</h3>
-            <p class="text-center"><em>Blue Beach Vibes</em></p>
-            <div class="row test">
-                <div class="col-md-12">
-                    <p>Contact us for any inquiries on our vibes.</p>
-                    <p><span class="glyphicon glyphicon-map-marker"></span>Venice, Fl</p>
-                    <p><span class="glyphicon glyphicon-phone"></span>Phone: +00 55555555555</p>
-                    <p><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</p>
+                </div><br>
+            </div><br><br>
+            <div class="container">
+                <h3 id="contact" class="text-center">Contact</h3>
+                <p class="text-center"><em>Blue Beach Vibes</em></p>
+                <div class="row test">
+                    <div class="col-md-12">
+                        <p>Contact us for any inquiries on our vibes.</p>
+                        <p><span class="glyphicon glyphicon-map-marker"></span>Venice, Fl</p>
+                        <p><span class="glyphicon glyphicon-phone"></span>Phone: +00 55555555555</p>
+                        <p><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div id="message">Namaste!</div>
-        <script src="js/add-content.js"></script>
+            <div id="message">Namaste!</div>
+            <script src="js/add-content.js"></script>
+            <footer class="text-center">
+                <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+                    <span class="glyphicon glyphicon-chevron-up"></span>
+                </a><br><br>
+                <p>Page Made by Danielle Smith</p>
+            </footer>
+
+            <script>
+                $(document).ready(function () {
+                    // Initialize Tooltip
+                    $('[data-toggle="tooltip"]').tooltip();
+
+                    // Add smooth scrolling to all links in navbar + footer link
+                    $(".navbar a, footer a[href='#myPage']").on('click', function (event) {
+
+                        // Make sure this.hash has a value before overriding default behavior
+                        if (this.hash !== "") {
+
+                            // Prevent default anchor click behavior
+                            event.preventDefault();
+
+                            // Store hash
+                            var hash = this.hash;
+
+                            // Using jQuery's animate() method to add smooth page scroll
+                            // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
+                            $('html, body').animate({
+                                scrollTop: $(hash).offset().top
+                            }, 900, function () {
+
+                                // Add hash (#) to URL when done scrolling (default click behavior)
+                                window.location.hash = hash;
+                            });
+                        } // End if
+                    });
+                })
+                $(document).ready(function () {
+                    $('[data-toggle="tooltip"]').tooltip();
+                })
+            </script>
+
 </body>
 
 </html>
