--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#home">Techniques</a></li>
                     <li><a href="#contact">Contact Us</a></li>
+                    <li><a href="#prices">Prices</li>
                 </ul>
             </div>
         </div>
@@ -141,6 +142,18 @@
                     </ul>
                 </div><br>
             </div><br><br>
+            <div class="bg-1">
+                <div class="container">
+                    <h3 id="prices" class="text-center">Prices and Hours</h3>
+
+                    <ul class="list-group">
+                        <li class="list-group-item">1 Hour Morning Vibe Alteration M-Sat 6:30am, $10/session</li>
+                        <li class="list-group-item">1 Hour Afternoon Vibe Alteration M-Sat 4pm, $10/session</li>
+                        <li class="list-group-item">3 Hour Sun Dog Sunday Special 7am, $20/session <span
+                                class="label label-danger">Limited Enrollment!</span></li>
+                    </ul>
+                </div>
+            </div>
             <div class="container">
                 <h3 id="contact" class="text-center">Contact</h3>
                 <p class="text-center"><em>Blue Beach Vibes</em></p>
