--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="https://i.postimg.cc/65WmttKY/blue-beach-waves.jpg" alt="beach">
+                <img src="images/beach.jpg" alt="beach">
                 <div class="carousel-caption">
-                    <h3 id=>Feel Small</h3>
-                    <p>The world is big and beautiful.</p>
+                    <h3 id=>Feel Energy</h3>
+                    <p>All energy will ebb and flow, so experience your feelings freely.</p>
                 </div>
             </div>
 
             <div class="item">
-                <img src="https://i.postimg.cc/vBjW4JSg/vacation-peace-sign-in-ocean-1.jpg" alt="peace">
+                <img src="images/peace.jpg" alt="peace">
                 <div class="carousel-caption">
                     <h3>Feel Peace</h3>
                     <p>The more you adventure, the more peace you will find in yourself.</p>
@@ -56,10 +56,10 @@
             </div>
 
             <div class="item">
-                <img src="https://i.postimg.cc/xjBLPSjt/waves-crashing-on-beach.jpg" alt="waves">
+                <img src="images/beach1.jpg" alt="waves">
                 <div class="carousel-caption">
                     <h3>Feel Free</h3>
-                    <p>All energy will ebb and flow, so experience your feelings freely.</p>
+                    <p>The world is big and beautiful.</p>
                 </div>
             </div>
         </div>
